--- a/rule.ini
+++ b/rule.ini
@@ -4,7 +4,7 @@
 
 ; 自定义 ruleset
 ; 自定义的指定翻墙列表，最高优先级
-ruleset=🌍 国外媒体,https://raw.githubusercontent.com/wmgylc/clash_rule/main/custom_proxy.list
+ruleset=♻️ 国别故障转移,https://raw.githubusercontent.com/wmgylc/clash_rule/main/custom_proxy.list
 ; 自定义的全球直连列表，最高优先级
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/wmgylc/clash_rule/main/custom_direct.list
 ; 自定义的拦截列表，最高优先级
@@ -17,7 +17,7 @@ ruleset=♻️ 成人国别故障转移,https://raw.githubusercontent.com/wmgylc
 ; 第三方 ruleset
 ; youtube无广告节点
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/Aethersailor/Custom_OpenClash_Rules/main/rule/Custom_Direct.list
-ruleset=🌍 国外媒体,https://raw.githubusercontent.com/Aethersailor/Custom_OpenClash_Rules/main/rule/Custom_Proxy.list
+ruleset=♻️ 国别故障转移,https://raw.githubusercontent.com/Aethersailor/Custom_OpenClash_Rules/main/rule/Custom_Proxy.list
 ruleset=📢 谷歌FCM,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GoogleFCM/GoogleFCM.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
 ; 谷歌国内 IP 走直连
@@ -26,12 +26,12 @@ ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rul
 ; steam下载走直连
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/Aethersailor/Custom_OpenClash_Rules/main/rule/Steam_CDN.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/PrivateTracker/PrivateTracker.list
-ruleset=📲 Telegram,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.list
+ruleset=♻️ 国别故障转移,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.list
 ; ruleset=💬 GPT节点,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.list
-ruleset=Ⓜ️ Copilot,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Copilot/Copilot.list
+ruleset=♻️ 国别故障转移,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Copilot/Copilot.list
 ; ruleset=🚀 GitHub,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GitHub/GitHub.list
-ruleset=🍎 苹果服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Apple/Apple.list
-ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Microsoft/Microsoft.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Apple/Apple.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Microsoft/Microsoft.list
 ruleset=🇬 谷歌服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaMedia/ChinaMedia.list
 ruleset=♻️ 国别故障转移,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GlobalMedia/GlobalMedia.list
@@ -50,7 +50,7 @@ ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rul
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Lan/Lan.list
 ruleset=🎯 全球直连,[]GEOIP,LAN,no-resolve
 ruleset=🎯 全球直连,[]GEOIP,CN,no-resolve
-ruleset=🌍 国外媒体,[]FINAL
+ruleset=♻️ 国别故障转移,[]FINAL
 
 ; TODO 测试使用默认的
 ; custom_proxy_group=💬 GPT节点`url-test`(gpt|GPT)`http://cp.cloudflare.com/generate_204`60,,120
@@ -59,22 +59,22 @@ ruleset=🌍 国外媒体,[]FINAL
 custom_proxy_group=♻️ 成人国别故障转移`fallback`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇸🇬 新加坡节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇹🇷 土耳其节点`[]🇦🇺 澳大利亚节点`[]🇳🇱 荷兰节点`[]🇨🇦 加拿大节点`[]🇮🇳 印度节点`[]🇻🇳 越南节点`[]🇷🇺 俄罗斯节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🌐 其他国家`[]🎯 全球直连`http://cp.cloudflare.com/generate_204`60,,120
 
 ; 苹果直连，允许手动设置
-custom_proxy_group=🍎 苹果服务`select`[]🎯 全球直连`[]♻️ 国别故障转移
+; custom_proxy_group=🍎 苹果服务`select`[]🎯 全球直连`[]♻️ 国别故障转移
 
 ; 微软 copilot 翻墙，其他直连
-custom_proxy_group=Ⓜ️ Copilot`select`[]♻️ 国别故障转移
-custom_proxy_group=Ⓜ️ 微软服务`select`[]🎯 全球直连
+; custom_proxy_group=Ⓜ️ Copilot`select`[]♻️ 国别故障转移
+; custom_proxy_group=Ⓜ️ 微软服务`select`[]🎯 全球直连
 
 ; 谷歌使用故障转移，尽可能避免不提供完整服务的地区
 custom_proxy_group=📢 谷歌FCM`select`[]♻️ 国别故障转移
 custom_proxy_group=🇬 谷歌服务`select`[]♻️ 国别故障转移
-custom_proxy_group=📹 YouTube故障转移`fallback`[]📹 YouTube节点测速`[]♻️ 国别故障转移`http://cp.cloudflare.com/generate_204`60,,120
-custom_proxy_group=📹 YouTube节点测速`url-test`(YouTube)`http://cp.cloudflare.com/generate_204`60,,120
+; custom_proxy_group=📹 YouTube故障转移`fallback`[]📹 YouTube节点测速`[]♻️ 国别故障转移`http://cp.cloudflare.com/generate_204`60,,120
+; custom_proxy_group=📹 YouTube节点测速`url-test`(YouTube)`http://cp.cloudflare.com/generate_204`60,,120
 
 ; 其他网站都正常翻墙或直连或屏蔽
-custom_proxy_group=🚀 GitHub`select`[]♻️ 国别故障转移
-custom_proxy_group=📲 Telegram`select`[]♻️ 国别故障转移
-custom_proxy_group=🌍 国外媒体`select`[]♻️ 国别故障转移
+; custom_proxy_group=🚀 GitHub`select`[]♻️ 国别故障转移
+; custom_proxy_group=📲 Telegram`select`[]♻️ 国别故障转移
+; custom_proxy_group=🌍 国外媒体`select`[]♻️ 国别故障转移
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
 custom_proxy_group=🛑 广告拦截`select`[]REJECT
 
