--- a/rule.ini
+++ b/rule.ini
@@ -12,7 +12,7 @@ ruleset=🛑 广告拦截,https://raw.githubusercontent.com/wmgylc/clash_rule/ma
 ; 原list配置了v2ray走翻墙，此处改为直连
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/wmgylc/clash_rule/main/direct_fork_ios_rule_script.list
 ; 日本成人网站
-ruleset=♻️ 成人国别故障转移,https://raw.githubusercontent.com/wmgylc/clash_rule/refs/heads/main/jav_porn.list
+; ruleset=♻️ 成人国别故障转移,https://raw.githubusercontent.com/wmgylc/clash_rule/refs/heads/main/jav_porn.list
 
 ; 第三方 ruleset
 ; youtube无广告节点
@@ -56,7 +56,7 @@ ruleset=♻️ 国别故障转移,[]FINAL
 ; custom_proxy_group=💬 GPT节点`url-test`(gpt|GPT)`http://cp.cloudflare.com/generate_204`60,,120
 
 ; 避开不提供服务的国家
-custom_proxy_group=♻️ 成人国别故障转移`fallback`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇸🇬 新加坡节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇹🇷 土耳其节点`[]🇦🇺 澳大利亚节点`[]🇳🇱 荷兰节点`[]🇨🇦 加拿大节点`[]🇮🇳 印度节点`[]🇻🇳 越南节点`[]🇷🇺 俄罗斯节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🌐 其他国家`[]🎯 全球直连`http://cp.cloudflare.com/generate_204`60,,120
+; custom_proxy_group=♻️ 成人国别故障转移`fallback`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇸🇬 新加坡节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇹🇷 土耳其节点`[]🇦🇺 澳大利亚节点`[]🇳🇱 荷兰节点`[]🇨🇦 加拿大节点`[]🇮🇳 印度节点`[]🇻🇳 越南节点`[]🇷🇺 俄罗斯节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🌐 其他国家`[]🎯 全球直连`http://cp.cloudflare.com/generate_204`60,,120
 
 ; 苹果直连，允许手动设置
 ; custom_proxy_group=🍎 苹果服务`select`[]🎯 全球直连`[]♻️ 国别故障转移
@@ -79,7 +79,7 @@ custom_proxy_group=🎯 全球直连`select`[]DIRECT
 custom_proxy_group=🛑 广告拦截`select`[]REJECT
 
 ; 基础架构
-custom_proxy_group=♻️ 国别故障转移`fallback`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇭🇰 香港节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]🇷🇺 俄罗斯节点`[]🇹🇼 台湾节点`[]🇦🇺 澳大利亚节点`[]🇳🇱 荷兰节点`[]🇨🇦 加拿大节点`[]🇮🇳 印度节点`[]🌐 其他国家`[]🎯 全球直连`http://cp.cloudflare.com/generate_204`60,,120
+custom_proxy_group=♻️ 国别故障转移`fallback`[]🇸🇬 新加坡节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇭🇰 香港节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]🇷🇺 俄罗斯节点`[]🇹🇼 台湾节点`[]🇦🇺 澳大利亚节点`[]🇳🇱 荷兰节点`[]🇨🇦 加拿大节点`[]🇮🇳 印度节点`[]🌐 其他国家`[]🎯 全球直连`http://cp.cloudflare.com/generate_204`60,,120
 
 ; 国别分组
 custom_proxy_group=🇯🇵 日本节点`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://cp.cloudflare.com/generate_204`60,,120
