--- a/rule.ini
+++ b/rule.ini
@@ -58,7 +58,7 @@ custom_proxy_group=🎯 全球直连`select`[]DIRECT
 custom_proxy_group=🛑 广告拦截`select`[]REJECT
 
 ; 基础架构
-custom_proxy_group=♻️ 国别故障转移`fallback`[]🇸🇬 新加坡节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇭🇰 香港节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]🇷🇺 俄罗斯节点`[]🇹🇼 台湾节点`[]🇦🇺 澳大利亚节点`[]🇳🇱 荷兰节点`[]🇨🇦 加拿大节点`[]🇮🇳 印度节点`[]🌐 其他国家`[]🎯 全球直连`http://cp.cloudflare.com/generate_204`60,,120
+custom_proxy_group=♻️ 国别故障转移`fallback`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇭🇰 香港节点`[]🇸🇬 新加坡节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]🇷🇺 俄罗斯节点`[]🇹🇼 台湾节点`[]🇦🇺 澳大利亚节点`[]🇳🇱 荷兰节点`[]🇨🇦 加拿大节点`[]🇮🇳 印度节点`[]🌐 其他国家`[]🎯 全球直连`http://cp.cloudflare.com/generate_204`60,,120
 
 ; 国别分组
 custom_proxy_group=🇯🇵 日本节点`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://cp.cloudflare.com/generate_204`60,,120
