--- a/rule.ini
+++ b/rule.ini
@@ -27,6 +27,7 @@ ruleset=♻️ 国别故障转移,https://raw.githubusercontent.com/blackmatrix7
 ; ruleset=💬 GPT节点,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.list
 ruleset=♻️ 国别故障转移,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Copilot/Copilot.list
 ; ruleset=🚀 GitHub,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GitHub/GitHub.list
+ruleset=🌍 Gemini,https://raw.githubusercontent.com/wmgylc/clash_rule/refs/heads/main/gemini.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Apple/Apple.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Microsoft/Microsoft.list
 ruleset=🇬 谷歌服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google.list
@@ -48,6 +49,9 @@ ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rul
 ruleset=🎯 全球直连,[]GEOIP,LAN,no-resolve
 ruleset=🎯 全球直连,[]GEOIP,CN,no-resolve
 ruleset=♻️ 国别故障转移,[]FINAL
+
+; Gemini test
+custom_proxy_group=🌍 Gemini`url-test`^(?!.*(🇺🇸|美国|美西|美东|US|USA|United States|🇷🇺|俄罗斯|RU|Russia|🇭🇰|香港|HK|Hong Kong|IPv6|ipv6)).*$`http://cp.cloudflare.com/generate_204`60,,120
 
 ; 谷歌使用故障转移，尽可能避免不提供完整服务的地区
 custom_proxy_group=📢 谷歌FCM`select`[]♻️ 国别故障转移
