--- a/rule.ini
+++ b/rule.ini
@@ -12,26 +12,26 @@ ruleset=🛑 广告拦截,https://raw.githubusercontent.com/wmgylc/clash_rule/ma
 ; 原list配置了v2ray走翻墙，此处改为直连
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/wmgylc/clash_rule/main/direct_fork_ios_rule_script.list
 
+; gemini test
+ruleset=🌍 Gemini,https://raw.githubusercontent.com/wmgylc/clash_rule/refs/heads/main/gemini.list
+
 ; 第三方 ruleset
+; 大部分域名都要通过域名规则匹配，减少一次 dns 查询耗时
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/Aethersailor/Custom_OpenClash_Rules/main/rule/Custom_Direct.list
-ruleset=♻️ 国别故障转移,https://raw.githubusercontent.com/Aethersailor/Custom_OpenClash_Rules/main/rule/Custom_Proxy.list
-ruleset=📢 谷歌FCM,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GoogleFCM/GoogleFCM.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
-; 谷歌国内 IP 走直连
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCNProxyIP.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/SteamCN/SteamCN.list
-; steam下载走直连
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/Aethersailor/Custom_OpenClash_Rules/main/rule/Steam_CDN.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/PrivateTracker/PrivateTracker.list
-ruleset=♻️ 国别故障转移,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.list
-; ruleset=💬 GPT节点,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.list
-ruleset=♻️ 国别故障转移,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Copilot/Copilot.list
-; ruleset=🚀 GitHub,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GitHub/GitHub.list
-ruleset=🌍 Gemini,https://raw.githubusercontent.com/wmgylc/clash_rule/refs/heads/main/gemini.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Apple/Apple.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Microsoft/Microsoft.list
-ruleset=🇬 谷歌服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaMedia/ChinaMedia.list
+
+ruleset=♻️ 国别故障转移,https://raw.githubusercontent.com/Aethersailor/Custom_OpenClash_Rules/main/rule/Custom_Proxy.list
+ruleset=♻️ 国别故障转移,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GoogleFCM/GoogleFCM.list
+ruleset=♻️ 国别故障转移,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.list
+ruleset=♻️ 国别故障转移,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Copilot/Copilot.list
+ruleset=♻️ 国别故障转移,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google.list
 ruleset=♻️ 国别故障转移,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GlobalMedia/GlobalMedia.list
 ruleset=♻️ 国别故障转移,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Epic/Epic.list
 ruleset=♻️ 国别故障转移,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/EA/EA.list
@@ -41,6 +41,7 @@ ruleset=♻️ 国别故障转移,https://raw.githubusercontent.com/blackmatrix7
 ruleset=♻️ 国别故障转移,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Nintendo/Nintendo.list
 ruleset=♻️ 国别故障转移,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Steam/Steam.list
 ruleset=♻️ 国别故障转移,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
+
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
@@ -53,15 +54,9 @@ ruleset=♻️ 国别故障转移,[]FINAL
 ; Gemini test
 custom_proxy_group=🌍 Gemini`url-test`^(?!.*(🇺🇸|美国|美西|美东|US|USA|United States|🇷🇺|俄罗斯|RU|Russia|🇭🇰|香港|HK|Hong Kong|IPv6|ipv6)).*$`http://cp.cloudflare.com/generate_204`60,,120
 
-; 谷歌使用故障转移，尽可能避免不提供完整服务的地区
-custom_proxy_group=📢 谷歌FCM`select`[]♻️ 国别故障转移
-custom_proxy_group=🇬 谷歌服务`select`[]♻️ 国别故障转移
-
-; 其他网站都正常翻墙或直连或屏蔽
+; 基础架构
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
 custom_proxy_group=🛑 广告拦截`select`[]REJECT
-
-; 基础架构
 custom_proxy_group=♻️ 国别故障转移`fallback`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇭🇰 香港节点`[]🇸🇬 新加坡节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]🇷🇺 俄罗斯节点`[]🇹🇼 台湾节点`[]🇦🇺 澳大利亚节点`[]🇳🇱 荷兰节点`[]🇨🇦 加拿大节点`[]🇮🇳 印度节点`[]🌐 其他国家`[]🎯 全球直连`http://cp.cloudflare.com/generate_204`60,,120
 
 ; 国别分组
